--- a/vignettes/quicktour.Rmd
+++ b/vignettes/quicktour.Rmd
@@ -89,13 +89,13 @@ tokenizer$train(fpath, trainer)
 This should only take a few seconds to train our tokenizer on the full wikitext dataset! To save the tokenizer in one file that contains all its configuration and vocabulary, just use the `save()` method:
 
 ```{r}
-tokenizer$save("data/tokenizer-wiki.json")
+tokenizer$save("tokenizer-wiki.json")
 ```
 
 and you can reload your tokenizer from that file with the `from_file()` class method:
 
 ```{r}
-tokenizer <- tokenizer$from_file("data/tokenizer-wiki.json")
+tokenizer <- tokenizer$from_file("tokenizer-wiki.json")
 ```
 
 
