--- a/vignettes/quicktour.Rmd
+++ b/vignettes/quicktour.Rmd
@@ -82,14 +82,23 @@ tok$pre_tokenizer <- pre_tokenizers_whitespace()
 
 Now, we can just call the `train()` method with any list of files we want to use:
 
-```{r}
+```{r, eval = FALSE}
 tok$train(fpath, trainer)
 ```
+```{r include=FALSE}
+if (!file.exists("tokenizer-wiki.json"))
+  tok$train(fpath, trainer)
+```
+
 
 This should only take a few seconds to train our tokenizer on the full wikitext dataset! To save the tokenizer in one file that contains all its configuration and vocabulary, just use the `save()` method:
 
-```{r}
+```{r, eval = FALSE}
 tok$save("tokenizer-wiki.json")
+```
+```{r include=FALSE}
+if (!file.exists("tokenizer-wiki.json"))
+  tok$save("tokenizer-wiki.json")
 ```
 
 and you can reload your tokenizer from that file with the `from_file()` class method:
